--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,7 +207,7 @@ img{
     position:relative;
     background:transparent;
     border:none;
-    box-shadow: 0 2px 0px 0px rgba(102, 102, 102, 0.08);
+    box-shadow: 0 2px 0 0 rgba(102, 102, 102, 0.08);
 }
 .material-input input:focus{
     outline: 0;
@@ -348,7 +348,7 @@ img{
 }
 
 .pop-up{
-    border: 1.5px solid #ff0f98;
+    border: 1px solid #ff0f98;
     font-size: 16px;
     height: 200px;
     width: 100%;
