--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,63 +351,63 @@ img{
     border: 1.5px solid #ff0f98;
     font-size: 16px;
     height: 200px;
-    width: 100%;
-    padding: 0;
-    z-index: 3;
     margin-bottom: 20px;
-
+    padding: 0;
+    width: 100%;
+    z-index: 3;
 }
 
 .pop-up p{
-
-    text-align: center;
-    margin-top: 80px;
     font-size: 30px;
+    margin-top: 80px;
+    text-align: center;
 }
 
 .pop-up:hover{
     border:1px dashed #ff0f98;
-
 }
 
  input[type=file] {
-     width: 439px;
+
      border: 1px solid #ff0f98;
+     cursor:pointer;
      height: 200px;
-     z-index: 4;
-     opacity: 0;
      margin-top: -145px;
+     opacity: 0;
      position: absolute;
      cursor:pointer;
+     width: 439px;
+     z-index: 4;
 }
 
 input[type=file]:hover{
     margin-top: -166px;
 }
 .hover-file{
+    background: rgba(255, 255, 255, 0.8);
+    color: rgba(255, 255, 255, 0);
     height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.46);
-    position: fixed;
-    z-index: 2;
-    top: 0;
     left: 0;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 2;
 }
 .hover-file1{
-    height: 100% !important;
-    width: 100% !important;
     background: rgba(0, 0, 0, 0.46);
-    position: fixed !important;
-    z-index: 3 !important;
-    top: 166px;
+    height: 100% !important;
     left: 0;
+    position: fixed !important;
+    top: 166px;
+    width: 100% !important;
+    z-index: 3 !important;
 }
 
 .imagen img{
-    width: 25%;
+    max-height: 120px;
     padding: 5px;
-    max-height: 100px;
     vertical-align: middle;
+    width: 25%;
 }
 
 
