--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,7 @@ img{
 
 .Credito{
     margin: 10% auto 0;
-    max-width: 600px;
+    max-width: 1024px;
 }
 
 .Credito-form{
@@ -337,7 +337,7 @@ img{
     width: 80%;
 }
 
-.imagen{
+.request-image{
     margin-bottom: 30px;
 }
 
@@ -351,6 +351,7 @@ img{
     height: 200px;
     margin-bottom: 20px;
     padding: 0;
+    text-align: center;
     width: 100%;
     z-index: 3;
 }
@@ -365,34 +366,62 @@ img{
     border:1px dashed #ff0f98;
 }
 
-<<<<<<< HEAD
+#image-file{
+    width: 0;
+    height: 0;
+}
+
+
  input[type=file] {
 
      border: 1px solid #ff0f98;
-     cursor:pointer;
+     cursor: pointer;
      height: 200px;
      margin-top: -145px;
+     margin-left: -34.9%;
      opacity: 0;
      position: absolute;
-     cursor:pointer;
-     width: 439px;
+     width: 69.8%;
      z-index: 4;
-=======
-input[type=file] {
-    width: 439px;
-    border: 1px solid #ff0f98;
-    height: 200px;
-    z-index: 4;
-    opacity: 0;
-    margin-top: -145px;
-    position: absolute;
-    cursor:pointer;
->>>>>>> d74404c2fc3826c857d6cebb9ed985585306fef8
 }
 
-input[type=file]:hover{
-    margin-top: -166px;
+.Credit-select{
+    font-size: 18px;
+    height: 35px;
+    width: 100%;
+    background: transparent;
+    border:1px solid transparent;
+
 }
+.Credit-select:focus{
+    -webkit-animation: myfirst 2s;
+    animation: myfirst 2s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+}
+
+
+@-webkit-keyframes myfirst {
+    0%   {border-bottom: 2px solid #e80e8a}
+    50%  {border-right: 2px solid #e80e8a}
+    75%  {border-top: 2px solid #e80e8a}
+    100% {border-left: 2px solid #e80e8a}
+ }
+
+@keyframes myfirst {
+    0%   {border-bottom: 1px solid #e80e8a}
+    50%  {border-right: 1px solid #e80e8a}
+    75%  {border-top: 1px solid #e80e8a}
+    100% {border-left: 1px solid #e80e8a}
+}
+
+@media all and (max-width: 700px) and (min-width: 400px){
+    input[type=file] {
+        margin-top: -216px;
+    }
+
+}
+
 .hover-file{
     background: rgba(255, 255, 255, 0.8);
     color: rgba(255, 255, 255, 0);
@@ -402,6 +431,7 @@ input[type=file]:hover{
     top: 0;
     width: 100%;
     z-index: 2;
+    border:none !important;
 }
 .hover-file1{
     background: rgba(0, 0, 0, 0.46);
@@ -413,13 +443,44 @@ input[type=file]:hover{
     z-index: 3 !important;
 }
 
-.imagen img{
-    max-height: 120px;
-    padding: 5px;
-    vertical-align: middle;
-    width: 25%;
+.hover-file2{
+    height: 100% !important;
+    width: 35% !important;
+    min-width: 400px;
+    margin-top: -200px;
+    top: 0;
 }
 
+.img-content{
+    display: inline-block;
+    margin-right: 8px;
+    vertical-align: top;
+    text-align: center;
+    width: 80px;
+}
+
+.request-image img{
+    padding: 5px;
+    vertical-align: middle;
+    width: 50px;
+}
+
+.p-image{
+    word-break: break-all;
+    width: 80px;
+    font-size: 10px;
+}
+
+.Credit-section{
+    display: inline-block;
+    width: 45%;
+    min-width: 312px;
+}
+
+.u-CreditSection{
+    margin-right: 73px;
+    margin-bottom: -38px;
+}
 
 
 
