--- a/public/css/style.css
+++ b/public/css/style.css
@@ -482,6 +482,20 @@ img{
     margin-bottom: -38px;
 }
 
-
+.Remember{
+    margin: auto;
+    padding: 0 20px 30px;
+    text-align: center;
+    width: 80%;
+}
+.Remember a{
+    color: #ff0f98;
+}
+.Remember a:hover{
+    color: #ff53bd;
+}
+@media (min-width: 600px) {
+    .Remember{ text-align: right; }
+}
 
 
