--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,39 +6,311 @@
 */
 
 /* Format Elements */
+@font-face {
+    font-family: 'creditsfont';
+    src: url('font/creditsfont.eot?51183993');
+    src: url('font/creditsfont.eot?51183993#iefix') format('embedded-opentype'),
+    url('font/creditsfont.woff?51183993') format('woff'),
+    url('font/creditsfont.ttf?51183993') format('truetype'),
+    url('font/creditsfont.svg?51183993#creditsfont') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+[class^="icon-"]:before, [class*=" icon-"]:before {
+    font-family: "creditsfont", serif;
+    font-style: normal;
+    font-weight: normal;
+    display: inline-block;
+    text-decoration: inherit;
+    width: 1em;
+    margin-right: .2em;
+    text-align: center;
+    font-variant: normal;
+    text-transform: none;
+    font-size: 120%;
+}
+
+.icon-user-1:before {
+    content: '\e800';
+}
+
+/* '' */
+.icon-twitter-1:before {
+    content: '\e801';
+}
+
+/* '' */
+.icon-facebook-1:before {
+    content: '\e802';
+}
+
+/* '' */
+.icon-instagramm:before {
+    content: '\e803';
+}
+
+/* '' */
+.icon-youtube:before {
+    content: '\e804';
+}
+
+/* '' */
+.icon-heart:before {
+    content: '\e805';
+}
+
+/* '' */
+.icon-star:before {
+    content: '\e806';
+}
+
+/* '' */
+.icon-star-half-alt:before {
+    content: '\e807';
+}
+
+/* '' */
+.icon-ok:before {
+    content: '\e808';
+}
+
+/* '' */
+.icon-ok-circled:before {
+    content: '\e809';
+}
+
+/* '' */
+.icon-cancel-circled:before {
+    content: '\e80a';
+}
+
+/* '' */
+.icon-cancel:before {
+    content: '\e80b';
+}
+
+/* '' */
+.icon-plus-squared:before {
+    content: '\e80c';
+}
+
+/* '' */
+.icon-thumbs-up-alt:before {
+    content: '\e80d';
+}
+
+/* '' */
+.icon-thumbs-down-alt:before {
+    content: '\e80e';
+}
+
+/* '' */
+.icon-download:before {
+    content: '\e80f';
+}
+
+/* '' */
+.icon-upload:before {
+    content: '\e810';
+}
+
+/* '' */
+.icon-plus-circled:before {
+    content: '\e811';
+}
+
+/* '' */
+.icon-trash-empty:before {
+    content: '\e812';
+}
+
+/* '' */
+.icon-print:before {
+    content: '\e813';
+}
+
+/* '' */
+.icon-bell-alt:before {
+    content: '\e814';
+}
+
+/* '' */
+.icon-bell:before {
+    content: '\e815';
+}
+
+/* '' */
+.icon-comment-empty:before {
+    content: '\e816';
+}
+
+/* '' */
+.icon-file-pdf:before {
+    content: '\e817';
+}
+
+/* '' */
+.icon-file-excel:before {
+    content: '\e818';
+}
+
+/* '' */
+.icon-file-word:before {
+    content: '\e819';
+}
+
+/* '' */
+.icon-folder-open:before {
+    content: '\e81a';
+}
+
+/* '' */
+.icon-folder:before {
+    content: '\e81b';
+}
+
+/* '' */
+.icon-cog:before {
+    content: '\e81c';
+}
+
+/* '' */
+.icon-chart-pie:before {
+    content: '\e81d';
+}
+
+/* '' */
+.icon-chart-area:before {
+    content: '\e81e';
+}
+
+/* '' */
+.icon-chart-bar:before {
+    content: '\e81f';
+}
+
+/* '' */
+.icon-user:before {
+    content: '\e820';
+}
+
+/* '' */
+.icon-info-circled:before {
+    content: '\e821';
+}
+
+/* '' */
+.icon-help-circled:before {
+    content: '\e822';
+}
+
+/* '' */
+.icon-users:before {
+    content: '\e823';
+}
+
+/* '' */
+.icon-child:before {
+    content: '\e824';
+}
+
+/* '' */
+.icon-male:before {
+    content: '\e825';
+}
+
+/* '' */
+.icon-user-2:before {
+    content: '\e826';
+}
+
+/* '' */
+.icon-user-3:before {
+    content: '\e827';
+}
+
+/* '' */
+.icon-child-1:before {
+    content: '\e828';
+}
+
+/* '' */
+.icon-user-4:before {
+    content: '\e829';
+}
+
+/* '' */
+.icon-th-large:before {
+    content: '\e82a';
+}
+
+/* '' */
+.icon-th-list:before {
+    content: '\e82b';
+}
+
+/* '' */
+.icon-table:before {
+    content: '\e82c';
+}
+
+/* '' */
+.icon-comment:before {
+    content: '\e82d';
+}
+
+/* '' */
+.icon-article-alt:before {
+    content: '\e82e';
+}
+
+/* '' */
+.icon-arrows-cw:before {
+    content: '\e82f';
+}
+
+/* '' */
 *:focus {
     outline: 0;
 }
-*{
+
+* {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
-a{
+
+a {
     text-decoration: none;
 }
+
 html, body {
     width: 100%;
-    height: 100%;
     margin: 0;
 }
+
 body {
     background-color: #eeeeee;
     color: #949494;
     font-family: 'Roboto', 'Helvetica Neue, Helvetica, Arial', sans-serif;
     font-size: 14px;
 }
+
 li {
     list-style: none;
 }
-h1, h2, h3, ul,figure {
+
+h1, h2, h3, ul, figure {
     margin: 0;
     padding: 0;
 }
-img{
+
+img {
     width: 100%;
 }
-.wrap{
+
+.wrap {
     height: 100%;
     max-width: 1280px;
     margin: auto;
@@ -46,23 +318,29 @@ img{
     position: relative;
     width: 100%;
 }
-.u-shadow-1{
+
+.u-shadow-1 {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
-.u-shadow-2{
+
+.u-shadow-2 {
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 }
-.u-shadow-3{
+
+.u-shadow-3 {
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24);
 }
-.u-shadow-4{
+
+.u-shadow-4 {
     box-shadow: 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
-.u-shadow-5{
+
+.u-shadow-5 {
     box-shadow: 0 25px 55px 0 rgba(0, 0, 0, 0.21);
 }
-.u-button{
-    -webkit-transform: translate3d(0,0,0);
+
+.u-button {
+    -webkit-transform: translate3d(0, 0, 0);
     position: relative;
     padding: 15px;
     background-color: #e80e8a;
@@ -70,23 +348,25 @@ img{
     cursor: pointer;
     overflow: hidden;
     box-shadow: 0 2px 0 #c40c74;
-    border:none;
+    border: none;
     width: 100%
 }
 
-.u-button:hover{
+.u-button:hover {
     background: #ff0f98;
 }
+
 .u-circle {
     position: absolute;
     z-index: 0;
-    background-color: rgba(0,0,0,0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     border-radius: 50%;
     transform: scale(0);
     opacity: 1;
     width: 100px;
     height: 100px;
 }
+
 .u-circle.is-animate {
     -webkit-animation: grow .3s linear;
     animation: grow .3s linear;
@@ -101,49 +381,56 @@ img{
 
 /* Header */
 
-.Header{
+.Header {
     background: #dedede;
     text-align: center;
     width: 100%;
 }
-.Header-content{
+
+.Header-content {
     display: flex;
     margin: 0 2rem;
 }
-.Header-logoLilipink{
+
+.Header-logoLilipink {
     background: #e80e8a;
     padding: 10px 10px 8px;
     width: 100px;
 }
-.Header-logoIntima{
+
+.Header-logoIntima {
     padding: 10px 10px 8px;
     width: 170px;
 
 }
+
 .Header-nav {
-    background: rgba(255,255,255, 0.96);
+    background: rgba(255, 255, 255, 0.96);
     height: 100%;
     left: 0;
-    padding-top:50px;
+    padding-top: 50px;
     position: fixed;
     transform: translateY(-100%);
     -webkit-transform: translateY(-100%);
     transition: all 0.5s cubic-bezier(0.2, 0, 0.03, 1);
     top: 0;
     width: 100%;
-    z-index: 1
+    z-index: 20
 }
-.Header-nav > ul{
+
+.Header-nav > ul {
     width: 100%;
 }
-.Header-nav > ul > li  ul{
+
+.Header-nav > ul > li ul {
     display: none;
 }
-.Header-nav > ul > li:first-child > a{
-     border-top: 1px solid #e80e8a;
- }
 
-.Header-nav a{
+.Header-nav > ul > li:first-child > a {
+    border-top: 1px solid #e80e8a;
+}
+
+.Header-nav a {
     display: block;
     width: 100%;
     padding: 10px;
@@ -151,92 +438,114 @@ img{
     border-left: 1px solid #e80e8a;
     border-right: 1px solid #e80e8a;
 }
-.Header-nav > ul > li{
+
+.Header-nav > ul > li {
     margin: 0 20px;
 }
-.Header-nav ul a:hover{
+
+.Header-nav ul a:hover {
     background: #e80e8a;
     color: #fff;
 }
-.Header-nav li a{
+
+.Header-nav li a {
     color: gray;
     font-size: 1.5em;
 
 }
-.Header-nav  ul > li:hover > ul{
+
+.Header-nav ul > li:hover > ul {
     display: block;
 }
-.Header-contentNav{
-    flex:2;
+
+.Header-contentNav {
+    flex: 2;
     text-align: right;
+    z-index: 30;
 }
-.Header-buttonNav{
+
+.Header-buttonNav {
     background: #9d9d9d;
     cursor: pointer;
     display: inline-block;
     margin-bottom: -3px;
     position: relative;
-    padding:  8px;
+    padding: 8px;
+    user-select: none;
     z-index: 2;
 }
-.show--element{
+
+.show--element {
     transform: translateY(0);
 }
-.u-line{
+
+.u-line {
     transition: all 0.2s cubic-bezier(0.2, 0, 0.03, 1)
 }
-.Header-buttonNav.is-show .Header-line1{
-    transform: rotate(135deg) translate(5px,-5px);
+
+.Header-buttonNav.is-show .Header-line1 {
+    transform: rotate(135deg) translate(5px, -5px);
 }
-.Header-buttonNav.is-show .Header-line2{
+
+.Header-buttonNav.is-show .Header-line2 {
     opacity: 0;
 }
-.Header-buttonNav.is-show .Header-line3{
-    transform: rotate(-135deg) translate(5px,5px);
+
+.Header-buttonNav.is-show .Header-line3 {
+    transform: rotate(-135deg) translate(5px, 5px);
 }
-.u-line{
+
+.u-line {
     display: block;
     background: #dedede;
     height: 4px;
     margin: 3px;
     width: 25px;
 }
+
 /* Input */
-.material-input input{
-    width:100%;
-    position:relative;
-    background:transparent;
-    border:none;
-    box-shadow: 0 2px 0px 0px rgba(102, 102, 102, 0.08);
+.material-input input {
+    width: 100%;
+    position: relative;
+    background: transparent;
+    border: none;
+    box-shadow: 0 2px 0 0 rgba(102, 102, 102, 0.08);
 }
-.material-input input:focus{
+
+.material-input input:focus {
     outline: 0;
 }
-.material-input{
-    margin:40px 0;
+
+.material-input {
+    margin: 40px 0;
     position: relative;
 }
-.material-input input:focus ~ span{
-    width:100%
+
+.material-input input:focus ~ span {
+    width: 100%
 }
+
 .material-input input:focus {
     height: 40px;
 }
+
 .material-input input:focus {
     outline: 0;
 }
-.material-input span{
+
+.material-input span {
 
     display: block;
     width: 0;
     height: 2px;
-    background: #e80e8a ;
+    background: #e80e8a;
     position: absolute;
     bottom: -2px;
     left: 0;
     transition: all 0.2s cubic-bezier(0.2, 0, 0.03, 1)
 }
-.material-input label{
+
+.material-input label {
     color: #999;
     position: absolute;
     top: 0;
@@ -244,33 +553,38 @@ img{
     transition: all 0.25s cubic-bezier(0.2, 0, 0.03, 1);
     pointer-events: none;
 }
-.material-input input:focus ~ label, .material-input input:valid ~ label{
+
+.material-input input:focus ~ label, .material-input input:valid ~ label {
     top: -10px
 }
-.material-input input:valid ~ span{
-    width:100%
+
+.material-input input:valid ~ span {
+    width: 100%
 }
-.material-input input:focus,.material-input input:valid {
+
+.material-input input:focus, .material-input input:valid {
     height: 40px;
     padding-top: 20px;
 }
 
 /* Login */
-.Login{
-    margin: auto;
+.Login {
+    margin: 80px auto;
     max-width: 600px;
-    transform: translateY(20%);
+
 }
-.Login-form{
+
+.Login-form {
     margin: auto;
     padding: 20px 20px 50px;
     width: 80%;
 }
+
 .label--checkbox {
     position: relative;
     line-height: 200%;
     cursor: pointer;
-    margin-top:-10px;
+    margin-top: -10px;
     display: block;
     padding: 0 2px 20px
 }
@@ -279,35 +593,39 @@ img{
     position: relative;
     margin: 0 1rem 0 0;
 }
+
 .checkbox:before {
 
     transition: all 0.3s ease-in-out;
     content: "";
     position: absolute;
-    top:-2px;
+    top: -2px;
     left: -2px;
     z-index: 1;
     width: 14px;
     height: 14px;
     border: 2px solid #bfbec0;
 }
+
 .checkbox:checked:before {
 
     transform: rotate(-45deg);
     height: 5px;
     width: 10px;
-    top:2px;
-    left:1px;
+    top: 2px;
+    left: 1px;
     border-color: #e80e8a;
     border-top-style: none;
     border-right-style: none;
 }
-.checkbox:checked:after{
+
+.checkbox:checked:after {
     background: #fff;
     border: 2px solid #e80e8a;
-    top:-2px;
+    top: -2px;
     left: -2px;
 }
+
 .checkbox:after {
     content: "";
     position: absolute;
@@ -318,125 +636,139 @@ img{
     background: rgb(219, 215, 211);
     cursor: pointer;
 }
-.label-danger{
+
+.label-danger {
     display: block;
-    color:rgb(231, 90, 64);
+    color: rgb(231, 90, 64);
     font-size: 1.2rem;
     font-weight: 500;
-    padding-top:30px;
+    padding-top: 30px;
 }
 
-.Credito{
+.Credito {
     margin: 10% auto 0;
     max-width: 1024px;
 }
 
-.Credito-form{
+.Credito-form {
     margin: auto;
     padding: 20px 20px 50px;
     width: 80%;
 }
 
-.request-image{
+.request-image {
     margin-bottom: 30px;
 }
 
-#files{
+#files {
     margin-bottom: 10px;
 }
 
-.pop-up{
-    border: 1.5px solid #ff0f98;
+.pop-up {
+    border: 1px solid #ff0f98;
     font-size: 16px;
     height: 200px;
     margin-bottom: 20px;
     padding: 0;
+    position: relative;
     text-align: center;
     width: 100%;
     z-index: 3;
 }
 
-.pop-up p{
-    font-size: 30px;
-    margin-top: 80px;
+.pop-up p {
+    font-size: 1.12em;
+    margin-top: -20px;
+    position: absolute;
     text-align: center;
+    width: 100%;
+    top: 50%;
 }
 
-.pop-up:hover{
-    border:1px dashed #ff0f98;
+.pop-up:hover {
+    border: 1px dashed #ff0f98;
 }
 
-#image-file{
+#image-file {
     width: 0;
     height: 0;
 }
 
-
- input[type=file] {
-
-     border: 1px solid #ff0f98;
-     cursor: pointer;
-     height: 200px;
-     margin-top: -145px;
-     margin-left: -34.9%;
-     opacity: 0;
-     position: absolute;
-     width: 69.8%;
-     z-index: 4;
+input[type=file] {
+    border: 1px solid #ff0f98;
+    cursor: pointer;
+    height: 200px;
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 4;
+    left: 0
 }
 
-.Credit-select{
+.Credit-select {
     font-size: 18px;
     height: 35px;
     width: 100%;
     background: transparent;
-    border:1px solid transparent;
+    border: 1px solid transparent;
 
 }
-.Credit-select:focus{
+
+.Credit-select:focus {
     -webkit-animation: myfirst 2s;
     animation: myfirst 2s;
     animation-iteration-count: infinite;
     -webkit-animation-iteration-count: infinite;
 }
 
-
 @-webkit-keyframes myfirst {
-    0%   {border-bottom: 2px solid #e80e8a}
-    50%  {border-right: 2px solid #e80e8a}
-    75%  {border-top: 2px solid #e80e8a}
-    100% {border-left: 2px solid #e80e8a}
- }
+    0% {
+        border-bottom: 2px solid #e80e8a
+    }
+    50% {
+        border-right: 2px solid #e80e8a
+    }
+    75% {
+        border-top: 2px solid #e80e8a
+    }
+    100% {
+        border-left: 2px solid #e80e8a
+    }
+}
 
 @keyframes myfirst {
-    0%   {border-bottom: 1px solid #e80e8a}
-    50%  {border-right: 1px solid #e80e8a}
-    75%  {border-top: 1px solid #e80e8a}
-    100% {border-left: 1px solid #e80e8a}
-}
-
-@media all and (max-width: 700px) and (min-width: 400px){
-    input[type=file] {
-        margin-top: -216px;
+    0% {
+        border-bottom: 1px solid #e80e8a
     }
-
+    50% {
+        border-right: 1px solid #e80e8a
+    }
+    75% {
+        border-top: 1px solid #e80e8a
+    }
+    100% {
+        border-left: 1px solid #e80e8a
+    }
 }
 
-@media all and (max-width: 1024px) and (min-width: 400px){
+
+
+@media all and (max-width: 1024px) and (min-width: 400px) {
     .Credito {
         text-align: center;
     }
-    .u-CreditSection{
-        margin-right: 0px !important;
+
+    .u-CreditSection {
+        margin-right: 0 !important;
     }
 
-    .Credit-section{
+    .Credit-section {
         width: 80% !important;
     }
 
 }
 
-.hover-file{
+.hover-file {
     background: rgba(255, 255, 255, 0.8);
     color: rgba(255, 255, 255, 0);
     height: 100%;
@@ -445,27 +777,27 @@ img{
     top: 0;
     width: 100%;
     z-index: 2;
-    border:none !important;
+    border: none !important;
 }
-.hover-file1{
+
+.hover-file1 {
     background: rgba(0, 0, 0, 0.46);
     height: 100% !important;
-    left: 667px;
+    left: 0;
     position: fixed !important;
-    top: 145px;
+    top: 0;
     width: 100% !important;
     z-index: 4 !important;
 }
 
-.hover-file2{
+.hover-file2 {
     height: 100% !important;
     width: 35% !important;
     min-width: 400px;
-    margin-top: -200px;
-    top: 0;
+    top: 50%;
 }
 
-.img-content{
+.img-content {
     display: inline-block;
     margin-right: 8px;
     vertical-align: top;
@@ -473,48 +805,176 @@ img{
     width: 80px;
 }
 
-.request-image img{
+.request-image img {
     padding: 5px;
     vertical-align: middle;
     width: 50px;
 }
 
-.p-image{
+.p-image {
     word-break: break-all;
     width: 80px;
     font-size: 10px;
 }
 
-.Credit-section{
+.Credit-section {
     display: inline-block;
     width: 45%;
     min-width: 312px;
 }
 
-.u-CreditSection{
+.u-CreditSection {
     margin-right: 70px;
     margin-bottom: -38px;
 }
 
-.Credito h1{
+.Credito h1 {
     text-align: center;
     padding-top: 50px;
 }
 
-.Remember{
+.Remember {
     margin: auto;
     padding: 0 20px 30px;
     text-align: center;
     width: 80%;
 }
-.Remember a{
+
+.Remember a {
     color: #ff0f98;
 }
-.Remember a:hover{
+
+.Remember a:hover {
     color: #ff53bd;
 }
+
 @media (min-width: 600px) {
-    .Remember{ text-align: right; }
+    .Remember {
+        text-align: right;
+    }
 }
 
+.justMail #password, .justMail #password + label, .justMail .label--checkbox, .justMail .label-danger {
+    display: none;
+}
 
+.u-loader {
+    background: rgba(255, 250, 250, 0.8);
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: fixed;
+    text-align: center;
+    top: 0;
+    width: 100%;
+    z-index: -10;
+}
+
+.u-loader svg {
+    margin-top: -50px;
+    position: relative;
+    top: 50%;
+}
+
+.u-loader svg path,
+.u-loader svg rect {
+    fill: #ff53bd;
+}
+
+.notify {
+    clear: both;
+    font-size: 12px;
+    display: block;
+    opacity: 0;
+    position: absolute;
+    transition: all 0.5s cubic-bezier(0.2, 0, 0.03, 1);
+    width: calc(100% - 40px);
+    z-index: -10;
+}
+
+.notify strong {
+    text-transform: uppercase;
+    display: inline-block;
+    text-align: center;
+    padding: 17px 10px;
+    background: rgba(0, 0, 0, 0.1);
+
+}
+
+.notify span {
+    padding-left: 15px;
+}
+
+.warning {
+    background: #ffcb70;
+    color: #a1772d;
+    border: 1px solid #efb44e;
+}
+
+.error {
+    background: #df7e7e;
+    color: #9c4c4c;
+    border: 1px solid #c16d6d;
+}
+
+.success {
+    background: #7ec296;
+    color: #537d62;
+    border: 1px solid #6cb184;
+}
+
+.notify span.close-notify {
+    background: rgba(0, 0, 0, 0.07);
+    border: solid 1px;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 1.4rem;
+    float: right;
+    line-height: 0;
+    margin: 10px;
+    padding: 12px 8px 14px;
+    text-align: right;
+}
+
+.notify span.close-notify:hover {
+    background: rgba(183, 183, 183, 0.07);
+
+}
+
+.is-show {
+    animation: show-animation 2s forwards;
+    z-index: 5;
+}
+
+@keyframes show-animation {
+    20% {
+        opacity: 1;
+    }
+    60% {
+        opacity: .5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+
+}
+
+.Logo {
+    max-width: 400px;
+    margin: auto;
+    text-align: center;
+}
+
+.Logo-img {
+    width: 80%;
+}
+
+.Banner-img {
+    margin: auto;
+    max-width: 960px;
+    padding: 20px 10px
+}
+.Header-contentNav a{
+    vertical-align: top;
+}
