--- a/public/css/style.css
+++ b/public/css/style.css
@@ -301,7 +301,13 @@ h1, h2, h3, ul, figure {
     margin: 0;
     padding: 0;
 }
-
+h1{
+    font-weight: 100;
+    margin: 20px auto 30px;
+    max-width:1000px;
+    padding: 0;
+    text-align: center;
+}
 img {
     width: 100%;
 }
@@ -410,7 +416,7 @@ img {
     transition: all 0.5s cubic-bezier(0.2, 0, 0.03, 1);
     top: 0;
     width: 100%;
-    z-index: 20
+    z-index: 200
 }
 
 .Header-nav > ul {
@@ -933,7 +939,7 @@ input[type=file] {
 
 .is-show {
     animation: show-animation 2s forwards;
-    z-index: 100
+    z-index: 3000
 }
 
 @keyframes show-animation {
@@ -1009,6 +1015,69 @@ a.icon-logout{
     font-size: 1.1rem;
     line-height: inherit;
     margin: 11px 3px 0
+}
+
+.Table-content{
+    overflow: auto;
+    box-shadow: 0 1px 5px 0 ;
+    max-width: 1000px;
+    margin: auto;
+}
+table {
+    width: 100%;
+    margin: 0 auto;
+    background-color: #ffffff;
+    box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
+    text-align: center;
+    max-width: 1000px;
+}
+table a{
+    color: #e80e8a;
+    font-size: 1.2rem;
+    padding: 0 .2rem;
+}
+table a:hover{
+    color: #ff54c2;
+}
+tbody tr:hover{
+    background: #e7e9fd;
+}
+table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td{
+    padding: 16px;
+    border-top: 1px solid #ddd;
+}
+.table > thead > tr, .table > tbody > tr, .table > tfoot > tr{
+
+    transition: all .5s ease;
+}
+.pagination{
+    margin: 20px;
+    text-align: center;
+}
+.pagination li{
+    display: inline-block;
+}
+.pagination li a, .pagination .active, .pagination .disabled{
+    background-color: #fff;
+    border: 1px solid #ddd;
+    margin-left: -1px;
+    padding: 6px 12px;
+    text-decoration: none;
+}
+.pagination li a{
+    color: #e80e8a;
+}
+.pagination .active{
+    background: #e80e8a;
+    color: #fff;
+}
+.pagination>li:last-child>a,.pagination li:last-child{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.pagination>li:first-child>a,.pagination li:first-child{
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 @media (min-width: 600px) {
     .Remember {
