--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1092,3 +1092,7 @@ table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .
         display: inline-block;
     }
 }
+
+#hidden{
+    display: none;
+}
