--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1093,7 +1093,7 @@ table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .
     }
 }
 
-#hidden{
+.hidden{
     display: none;
 }
 
