creacion de los logs y modificaciones pequeñas en el formulario CreditRequest

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1209,3 +1209,10 @@ button.icon-search{
     position: absolute;
     width: 10px;
 }
+
+#date_birth,#date_expedition{
+    color:rgba(161, 161, 161, 0);
+}
+#date_birth:focus,#date_expedition:focus{
+    color:#949494;
+}
