--- a/public/css/style.css
+++ b/public/css/style.css
@@ -985,12 +985,6 @@ input[type=file] {
     width: 80%;
 }
 
-.Banner-img {
-    margin: auto;
-    max-width: 960px;
-    padding: 20px 10px
-}
-
 .Header-contentNav a {
     color: #9d9d9d;
     display: inline-block;
@@ -1221,4 +1215,70 @@ button.icon-search{
 }
 #date_birth:focus,#date_expedition:focus{
     color:#949494;
+}
+
+/*Slider */
+
+#slider{
+    height: 400px;
+    margin: auto;
+    max-width: 960px;
+    padding: 20px 10px
+}
+#slider img{
+    display: none;
+    height: 100%;
+    width: 100%;
+}
+#slider img:nth-child(1){
+    display: block;
+}
+#back, #next {
+
+    background: #2a2a2a;
+    display: block;
+    color: #fff;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 18px;
+    height: auto;
+    opacity: 0.8;
+    position: absolute;
+    padding: 1% 1%;
+    text-decoration: none;
+    top: 50%;
+    width: auto;
+    z-index: 1;
+}
+#back:hover, #next:hover{
+    opacity:1;
+}
+#back{
+    left: 152px;
+}
+#next{
+    right: 153px;
+}
+
+.slider{
+    display: inline-block;
+    background:rgba(24, 23, 23, 0.5) !important;
+    width: 15px !important;
+    height: 15px !important;
+    border-radius: 15px;
+    position: relative;
+    top:-25px;
+    left: 450px;
+    color:rgba(222, 184, 135, 0);
+}
+.sliderValid{
+    display: inline-block;
+    background: #e80e8a !important;
+    width: 15px !important;
+    height: 15px !important;
+    border: 2px solid rgba(256, 256, 256, 1) !important;
+    border-radius: 15px;
+    position: relative;
+    top:-25px;
+    left: 450px;
 }
