--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1194,6 +1194,18 @@ button.icon-search{
 
 }
 
+.close-button-slider{
+    background: #ff0f98;
+    border-radius: 15px;
+    cursor: pointer;
+    display: block;
+    height: 16px;
+    margin: 6px 12px -16px 2px;
+    position: relative;
+    width: 16px;
+    z-index: 5;
+}
+
 .img-content:hover .close-line{
     background: white;
     display: block;
@@ -1206,7 +1218,28 @@ button.icon-search{
 
 }
 
+.close-line-slider{
+    background: white;
+    display:inline-block;
+    height: 3px;
+    margin: 6px 3px;
+    position: absolute;
+    transform: rotate(47deg);
+    width: 10px;
+    z-index: 5;
+}
+
 .img-content:hover .close-line1{
+    background: white;
+    display: block;
+    height: 3px;
+    margin: 6px 3px;
+    transform: rotate(-47deg);
+    position: absolute;
+    width: 10px;
+}
+
+.close-line1-slider{
     background: white;
     display: block;
     height: 3px;
@@ -1327,7 +1360,6 @@ button.icon-search{
 
 .slider-content p{
     display: inline-block;
-    display: inline-block;
     font-size: 17px;
     margin-left: 10px;
 }
@@ -1362,4 +1394,16 @@ button.icon-search{
     cursor: pointer;
 }
 
+#slider-delete{
+    color: rgba(245, 245, 220, 0);
+    height: 90px;
+    width: 219px;
+    position: relative;
+    outline: 0;
+    z-index: 6;
+}
+
+.number_slider{
+    float:right;
+}
 
